proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/additional_type_trivial_1.py
# Test a syntactically wrong example of using static typing.
y:double = 4.5
